--- a/nginx/nginx.toml.template
+++ b/nginx/nginx.toml.template
@@ -7,6 +7,6 @@ dest = "/etc/nginx/nginx.conf"
 # keys in these TOML files we front the start with a script and substitute 
 # here.  (see confd/confd.sh)
 keys = [
-"SE_BACKEND_KEY"
+"apps/SE_SERVICE_DISCOVERY_KEY/containers"
 ]
-reload_cmd = "supervisorctl reload nginx"
+reload_cmd = "sv reload nginx"
