update SE to STACKENGINE

--- a/1.2/nginx/nginx.conf.template
+++ b/1.2/nginx/nginx.conf.template
@@ -9,7 +9,7 @@ http {
         # `confd` writes backends dynamically
         # You will need to manually change the key to the one you want
         # Don't forget to do this in the TOML file as well.
-        {{$servers := getenv "SE_BACKEND_KEY"}}
+        {{$servers := getenv "STACKENGINE_BACKEND_KEY"}}
         {{$values := printf "/%s/*" $servers}}
         {{range gets $values}}
             server {{.Value}};
